--- a/disclaimer.html
+++ b/disclaimer.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="styles.css">
 
+
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Favicons -->
@@ -33,31 +34,29 @@
       }
     </style>
 
-    
+
     <!-- Custom styles for this template -->
     <link href="index_files/cover.css" rel="stylesheet">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
-    
+
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
       <h3 class="float-md-start mb-0">Malware Samples (WIP)</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">About</a>
+        <a class="nav-link" href="index.html">About</a>
         <a class="nav-link" href="samples.html">Samples</a>
-        <a class="nav-link" href="disclaimer.html">Disclaimer</a>
+        <a class="nav-link active" aria-current="page" href="#">Disclaimer</a>
       </nav>
     </div>
   </header>
 
   <main class="px-3">
-    <h1>Malware Samples for Canvas LMS</h1>
-    <p class="lead">Small collection of malware samples meant to be used for pen testing on Canvas LMS.
-    These are not designed to be used for malicious purposes.</p>
-    <p class="lead">
-      <a href="samples.html" class="btn btn-lg btn-secondary">View</a>
-    </p>
+      <h2>Disclaimer</h2>
+    <p class="lead">Such samples displayed on this website are not meant for any malicious use.
+    They are solely intended for testing purposes only, whether that be on a local machine or with permission on someone else's.
+    I do not take any responsibility for any use of they samples.</p>
   </main>
 
   <footer class="mt-auto text-white-50">
@@ -69,6 +68,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
+
 
 </body></html>
