--- a/samples.html
+++ b/samples.html
@@ -11,12 +11,17 @@
 
     <link rel="stylesheet" href="styles.css">
 
+
+
+
+
     <!-- Bootstrap core CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Favicons -->
+
 <meta name="theme-color" content="#0099ff">
 
-
+<link rel="stylesheet" href="styles.css">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -33,42 +38,42 @@
       }
     </style>
 
-    
+
     <!-- Custom styles for this template -->
     <link href="index_files/cover.css" rel="stylesheet">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
-    
+
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
       <h3 class="float-md-start mb-0">Malware Samples (WIP)</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">About</a>
-        <a class="nav-link" href="samples.html">Samples</a>
+        <a class="nav-link" href="index.html">About</a>
+        <a class="nav-link active"  aria-current="page" href="#">Samples</a>
         <a class="nav-link" href="disclaimer.html">Disclaimer</a>
       </nav>
     </div>
   </header>
 
   <main class="px-3">
-    <h1>Malware Samples for Canvas LMS</h1>
-    <p class="lead">Small collection of malware samples meant to be used for pen testing on Canvas LMS.
-    These are not designed to be used for malicious purposes.</p>
-    <p class="lead">
-      <a href="samples.html" class="btn btn-lg btn-secondary">View</a>
-    </p>
+    <h6 class="a">
+        <a href="samples/crash.html">Crash</a><br>
+        <a href="samples/tabspam.html">Tab Spam</a><br>
+        <a href="samples/popups.html">Popups</a><br>
+        <a href="samples/credstealer.html">Cred. Stealer</a>
+    </h6>
   </main>
 
   <footer class="mt-auto text-white-50">
+      <p><b>Warning: Clicking on any of these will result in their execution!</b></p>
     <p>Credit: secretknowledge, javamaster, Bootstrap</p>
   </footer>
 </div>
 
-
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  
+
 
 </body></html>
